--- a/task3/login.html
+++ b/task3/login.html
@@ -38,7 +38,7 @@
     </div>
 
     <div class="clearfix">
-      <button type="button" class="cancel" ><span> <a href="../index.html">New User? Sign Up</a></span></button>
+      <button type="button" class="cancel" ><span> <a href="./signup.html">New User? Sign Up</a></span></button>
       <button type="submit" class="login"><span><a href="">Login</a></span></button>
     </div>
   </div>
